package prolevexman.api.auth;

public interface CredentialsProvider {
    Credentials getCredentials();
}
