classDiagram
    direction LR

%% Test
    class SignInPositiveTest {
        +@BeforeEach setUp(WebDriver)
        +@Test signInSupplierTest()
    }

%% Extensions
    class WebDriverExtension {
        +beforeAll(context)
        +afterAll(context)
        +beforeEach(context)
        +afterEach(context)
        +supportsParameter(...)
        +resolveParameter(...)
    }

%% Core / Driver
    class DriverFactory {
        +getDriver()
        +quitDriver()
    }
    class WebDriver {
<<interface/instance>>
}

%% UI
class BasePage {
-WebDriver driver
+BasePage(WebDriver)
+openPage(String)
+clickElementWithCheck(By)
+typeText(By, String)
+getText(By)
+waitVisibilityOfElement(By)
}

class LoginPage {
+openLoginPage()
+fillUsername(String)
+fillPassword(String)
+clickLoginButton()
+login(String,String)
+clickForgotPassword()
+getAuthErrorMessage()
    }

class NavigationPanel {
+isVisibleLogoutButton()
}

class ReportsPage {
+isLoaded()
}

%% Utils
class ConfigReader {
+get(String)
+get(String, String)
+getEnvCredential(String,String,Integer)
}

class LocatorResolver {
+resolve(String)
+byText(By,String)
}

%% Test data
class CredentialsProvider {
+getUser(String, int)
}
class EnvCredentialsProvider {
+getUser(String,int)
}
class TestUsers {
+supplier()
+supplier(int)
}
class User {
+getEmail()
+getPass()
    }

%% Зависимости
SignInPositiveTest --> WebDriverExtension : uses
WebDriverExtension --> DriverFactory : get/quit
DriverFactory --> WebDriver : provides
BasePage --> WebDriver : uses
LoginPage --> BasePage : extends
LoginPage --> LocatorResolver : resolves locators
LoginPage --> ConfigReader : reads URL
LoginPage --> ReportsPage : clickLoginButton returns
LoginPage --> NavigationPanel : login() returns
SignInPositiveTest --> LoginPage : uses
SignInPositiveTest --> NavigationPanel : uses
SignInPositiveTest --> ReportsPage : uses
LoginPage --> CredentialsProvider : via TestUsers / EnvCredentialsProvider
TestUsers --> EnvCredentialsProvider : provides
EnvCredentialsProvider --> ConfigReader : reads env credentials
LoginPage --> User : gets email/password
